Worked on table view headers, added image in detail view fullname

--- a/Contacts/Base.lproj/Main.storyboard
+++ b/Contacts/Base.lproj/Main.storyboard
@@ -107,11 +107,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="v5T-ag-6Rr">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rdK-hp-rhl">
+                                    <rect key="frame" x="137" y="32" width="100" height="100"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="100" id="F5c-WR-cpK"/>
+                                        <constraint firstAttribute="width" constant="100" id="QnO-cp-zxG"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="John Doe" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3CT-ON-Uir">
+                                    <rect key="frame" x="137" y="148" width="100" height="27"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            <constraints>
+                                <constraint firstItem="rdK-hp-rhl" firstAttribute="top" secondItem="v5T-ag-6Rr" secondAttribute="top" constant="32" id="5X1-XI-aqT"/>
+                                <constraint firstItem="rdK-hp-rhl" firstAttribute="centerX" secondItem="v5T-ag-6Rr" secondAttribute="centerX" id="8yd-TO-YcJ"/>
+                                <constraint firstItem="3CT-ON-Uir" firstAttribute="top" secondItem="rdK-hp-rhl" secondAttribute="bottom" constant="16" id="ZKC-VF-K02"/>
+                                <constraint firstItem="3CT-ON-Uir" firstAttribute="centerX" secondItem="v5T-ag-6Rr" secondAttribute="centerX" id="bYc-Q1-nzJ"/>
+                            </constraints>
+                        </view>
                         <sections>
                             <tableViewSection id="wvP-wZ-iVs">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="QKv-h7-hlE">
-                                        <rect key="frame" x="0.0" y="35" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="200" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QKv-h7-hlE" id="ib9-vO-AKV">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -139,7 +165,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="kdF-Kn-TB2">
-                                        <rect key="frame" x="0.0" y="79" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="244" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kdF-Kn-TB2" id="oBi-P4-WRa">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -171,7 +197,7 @@
                             <tableViewSection id="VvF-Ta-1m7">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="ZQv-nQ-aif">
-                                        <rect key="frame" x="0.0" y="159" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="324" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZQv-nQ-aif" id="51m-FF-iGp">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -199,7 +225,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="1GT-TA-lUf">
-                                        <rect key="frame" x="0.0" y="203" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="368" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1GT-TA-lUf" id="PFB-qC-N5w">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -227,7 +253,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="bpT-r8-BVH">
-                                        <rect key="frame" x="0.0" y="247" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="412" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bpT-r8-BVH" id="9at-65-IB7">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -255,7 +281,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="lT0-tt-KZd">
-                                        <rect key="frame" x="0.0" y="291" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="456" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lT0-tt-KZd" id="nUa-Ko-Vkb">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -293,6 +319,8 @@
                     <navigationItem key="navigationItem" id="Swx-YU-dXq"/>
                     <connections>
                         <outlet property="cityLabel" destination="jIe-Z8-kRK" id="3OB-a0-eDG"/>
+                        <outlet property="contactImage" destination="rdK-hp-rhl" id="qKK-SR-f3m"/>
+                        <outlet property="contactName" destination="3CT-ON-Uir" id="Y7d-yy-Ldb"/>
                         <outlet property="emailLabel" destination="bsv-X0-swH" id="0ei-Rw-wZ7"/>
                         <outlet property="phoneNumberLabel" destination="tL8-Wj-JAg" id="yKq-Pq-GDQ"/>
                         <outlet property="stateLabel" destination="gwj-y5-gew" id="DTW-gO-fcV"/>
